--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "alert": "^5.0.5",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^8.2.0",
     "ejs": "^2.7.1",
@@ -19,6 +20,7 @@
     "express-fileupload": "^1.2.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.16.2",
+    "googleapis": "^88.2.0",
     "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
